[project]
name = "eyesy_api_stubs"
version = "0.1.0"
description = "EYESY unofficial Python3 API stub"
authors = [
    { name = "zztkm", email = "zztkm@tsurutatakumi.info" }
]
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pygame>=2.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eyesy_api_stub"]
